# telegramGUI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  coreviews.cpp  dependlinux.sh  funjs.cpp  index.html  main.cpp  views.cpp
assets/: index.html
assets/css/: style.css
assets/js/: setka.js
include/: coreviews.h  funjs.h  views.h
